# artty

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.ckb/: ckb.db-shm  ckb.db-wal  jobs.db-shm  jobs.db-wal
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml  release.yml
completions/: artty.fish  artty.zsh
docs/: algorithm.md  examples.md  faq.md  index.md  reference.md
docs/assets/brand/: logo_ascii_color_w100.txt  logo_ascii_plain_w100.txt  logo_color_ascii_color_w100.txt  logo_color_ascii_plain_w100.txt
docs/assets/demo_images/outputs/raw_txt_outputs/: JB1_ascii_color_w150.txt  JB3_ascii_color_w175.txt  apple_ascii_color_w80.txt  apple_ascii_plain_w100.txt  apple_ascii_plain_w80.txt  arch_ascii_color_w200.txt  arch_ascii_plain_w200.txt  github_full_ascii_plain_w200.txt  linux_ascii_color_w100.txt  nasa_ascii_color_w100.txt  pkg-defender_ascii_plain_w125.txt  vscode_ascii_color_w100.txt
man/: artty.1
plans/: plan_fix_windows_ansi_test.md
scripts/: extract_changelog.sh
src/artty/: __init__.py  __main__.py  ansi.py  cli.py  converter.py
src/artty/completions/: artty.bash
src/artty/data/: logo_color.txt
src/artty/man/: artty.1
tests/: __init__.py  test_ansi.py  test_cli.py  test_converter.py  test_main.py
tests/assets/: test_ascii_color_w100.txt
